2004-04-22  Chris Demetriou  <cgd@broadcom.com>

	* config/tc-mips.c (md_longopts): Remove -membedded-pic option.
	(OPTION_MEMBEDDED_PIC): Remove.
	(OPTION_TRAP, OPTION_BREAK, OPTION_EB, OPTION_EL)
	(OPTION_FP32, OPTION_GP32, OPTION_CONSTRUCT_FLOATS)
	(OPTION_NO_CONSTRUCT_FLOATS, OPTIONS_FP64, OPTION_GP64)
	(OPTION_RELAX_BRANCH, OPTION_NO_RELAX_BRANCH)
	(OPTION_ELF_BASE): Renumber.
	(md_parse_option): Remove OPTION_MEMBEDDED_PIC handling.
	(md_show_usage): Remove mention of -membedded-pic.
	* doc/as.texinfo: Remove mention of -membedded-pic.

2004-04-23  Thiemo Seufer  <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.h (USE_GLOBAL_POINTER_OPT): Remove.
	* config/tc-mips.c (RDATA_SECTION_NAME, mips_target_format): Remove
	a.out support.
	(md_begin, mips_ip, md_parse_option, s_change_sec, s_option,
	s_abicalls, nopic_need_relax, tc_gen_reloc): Remove uses of
	USE_GLOBAL_POINTER_OPT.

2004-04-22  Thiemo Seufer  <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (macro): One more use of load_delay_nop.

2004-04-22  Atsushi Nemoto  <anemo@mba.ocn.ne.jp>

	* config/tc-mips.c (load_delay_nop): New function.
	(load_address, macro): Use load_delay_nop() to build a nop
	which can be omitted with gpr_interlocks.

2004-04-22  Thiemo Seufer  <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (hilo_interlocks, gpr_interlocks,
	cop_interlocks): Remove superfluous CPU entries.

2004-04-22  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (mav_parse_offset): Value must be multiple of 4.

2004-04-22  Peter Barada <peter@the-baradas.com>

	* NEWS: Added support for EMAC instructions and MAC/EMAC
	Motorola syntax.
	* config/m68k-parse.h: Add ACC[123], ACCEXT{01,23}, MAC/EMAC
	scale factor tokens, trailing_ampersand to mark mask addressing
	for MAC/EMAC instructions.
	* config/m68k-parse.y: Add options_ampersand clause, '<<',
	'>>'.
	(yylex): Handle '>', '<', and '&' following '+'.
	* config/tc-m68k.c: Set mcfmac/mcfemac on appropriate ColdFire